--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://affectionate-easley-365e1a.netlify.app/"
 languageCode = "en-us"
 title = "My ICT302 Site"
-theme = "m10c"
+theme = "ananke"
 
 [build]
 publish = "public"
