--- a/themes/ananke/config.toml
+++ b/themes/ananke/config.toml
@@ -34,3 +34,4 @@ enableRobotsTXT = true
   background_color_class = "bg-blue"
   featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 2
+  body_classes = "avenir bg-grey"
