--- a/themes/ananke/config.toml
+++ b/themes/ananke/config.toml
@@ -32,7 +32,7 @@ enableRobotsTXT = true
   rss = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-blue"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  featured_image = "/images/Epic.jpg"
   recent_posts_number = 2
   body_classes = "sans-serif bg-gold"
   post_content_classes = "times bg-light-green"
